ci: fix bufbuild dependency

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,8 +10,8 @@ on:
     - 'go.sum'
     # Protocol Buffers
     - '**.proto'
-    - 'buf.yaml'
-    - 'buf.lock'
+    - '**/buf.yaml'
+    - '**/buf.lock'
     - 'buf.gen.yaml'
     - 'buf.work.yaml'
     # GitHub Actions
