--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,6 @@ jobs:
       CC: 'gcc'
       CXX: 'g++'
       CGO_ENABLED: '1'
-      AQUA_VERSION: 'v1.4.0'
       RELEASE_GO_VERSION: '1.18'
     runs-on: ${{ matrix.os }}-latest
     name: Go ${{ matrix.go }} (${{ matrix.os }})
@@ -71,7 +70,7 @@ jobs:
     - name: Setup Aqua
       uses: aquaproj/aqua-installer@v1.0.0
       with:
-        aqua_version: ${{ env.AQUA_VERSION }}
+        aqua_version: v1.4.0
     ################################################################################
     # Cache
     ################################################################################
