--- a/renovate.json
+++ b/renovate.json
@@ -5,5 +5,6 @@
     ":timezone(Asia/Tokyo)",
     "github>aquaproj/aqua-renovate-config#1.1.0"
   ],
-  "dependencyDashboard": true
+  "dependencyDashboard": true,
+  "postUpdateOptions": ["gomodUpdateImportPaths", "gomodTidy"]
 }
