--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -6,5 +6,14 @@
     "github>aquaproj/aqua-renovate-config#1.1.0"
   ],
   "dependencyDashboard": true,
-  "postUpdateOptions": ["gomodUpdateImportPaths", "gomodTidy"]
+  "postUpdateOptions": [
+    "gomodUpdateImportPaths",
+    "gomodTidy"
+  ],
+  "packageRules": [
+    {
+      "matchUpdateTypes": ["minor", "patch", "pin", "digest"],
+      "automerge": true
+    }
+  ]
 }
