--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,7 +71,7 @@ jobs:
     - name: Setup Aqua
       uses: aquaproj/aqua-installer@v1.0.0
       with:
-        aqua_version: v1.17.0
+        aqua_version: v1.17.0 # renovate: depName=aquaproj/aqua
     ################################################################################
     # Cache
     ################################################################################
